code/zz_cand_enum_dup.c.error
zz_cand_enum_dup.c:12:1: error: redefinition of enumerator 'A'
   12 | A=(2)
      | ^
zz_cand_enum_dup.c:11:11: note: previous definition is here
   11 | enum  E { A=(1),
      |           ^
1 error generated.
